--- a/qrcodegen.html
+++ b/qrcodegen.html
@@ -3,61 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon QR Generator</title>
+    <title>Neon QR – Final</title>
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0-rc.1/lib/qr-code-styling.js"></script>
 
     <style>
         body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;background:#f4f6f9;margin:0;padding:15px;display:flex;flex-direction:column;align-items:center;transition:all .4s;color:#222}
-        body.dark{background:#0d0a1a;color:#e879f9}
+        body.dark{background:#0d0a1a;color:#00d0ff}
         .container{background:white;padding:20px;border-radius:16px;box-shadow:0 8px 30px rgba(0,0,0,0.15);width:100%;max-width:360px;text-align:center;transition:all .4s}
-        body.dark .container{background:#1a0d2e;border:2px solid #e879f9;box-shadow:0 0 30px rgba(232,121,249,0.3)}
-        h1{margin:0 0 12px;font-size:20px;font-weight:800;background:linear-gradient(90deg,#e879f9,#ff7ac6);-webkit-background-clip:text;color:transparent}
+        body.dark .container{background:#1a0033;border:2px solid #00d0ff;box-shadow:0 0 35px rgba(0,208,255,0.4)}
+        h1{margin:0 0 12px;font-size:20px;font-weight:800;background:linear-gradient(90deg,#00d0ff,#0088ff);-webkit-background-clip:text;color:transparent}
 
         .dark-mode-row{display:flex;align-items:center;justify-content:space-between;margin:10px 0;padding:0 6px;font-weight:700;font-size:14px;color:#888}
-        body.dark .dark-mode-row label{color:#e879f9}
+        body.dark .dark-mode-row label{color:#00d0ff}
         .switch{width:40px;height:22px;position:relative;display:inline-block}
         .switch input{opacity:0;width:0;height:0}
-        .slider{position:absolute;top:0;left:0;right:0;bottom:0;background:#555;border-radius:34px;border:2px solid #e879f9;transition:.4s}
+        .slider{position:absolute;top:0;left:0;right:0;bottom:0;background:#555;border-radius:34px;border:2px solid #00d0ff;transition:.4s}
         body.dark .slider{background:transparent}
         .slider:before{position:absolute;content:"";height:16px;width:16px;left:2px;bottom:2px;background:white;border-radius:50%;transition:.4s}
-        input:checked+.slider{background:#e879f9}
+        input:checked+.slider{background:#00d0ff}
         input:checked+.slider:before{transform:translateX(16px)}
 
-        /* ALLE 3 DE VELDEN NU PERFECT GELIJK */
-        input[type="text"], select{
-            width:100%;
-            padding:11px 12px;
-            margin:8px 0;
-            border:none;
-            border-radius:10px;
-            font-size:15px;
-            box-shadow:0 0 0 2px #e879f9 inset;
-            background:#fff;
-            color:#222;
-            box-sizing:border-box;
-            appearance:none;
-            -webkit-appearance:none;
-            transition:all .3s;
-        }
-        input[type="text"]:focus, select:focus{
-            outline:none;
-            box-shadow:0 0 0 3px #e879f9,0 0 15px rgba(232,121,249,0.4);
-        }
-        body.dark input[type="text"], body.dark select{
-            background:#0d0a1a;
-            color:#e879f9;
-        }
-        body.dark input[type="text"]:focus, body.dark select:focus{
-            box-shadow:0 0 0 3px #e879f9,0 0 20px rgba(232,121,249,0.6);
-        }
+        input,select{width:100%;padding:11px 12px;margin:8px 0;border:none;border-radius:10px;font-size:15px;box-shadow:0 0 0 2px #00d0ff inset;background:#fff;color:#222;box-sizing:border-box;transition:all .3s}
+        input:focus,select:focus{outline:none;box-shadow:0 0 0 3px #00d0ff,0 0 15px rgba(0,208,255,0.4)}
+        body.dark input,body.dark select{background:#0d0a1a;color:#00d0ff}
+        body.dark input:focus,body.dark select:focus{box-shadow:0 0 0 3px #00d0ff,0 0 20px rgba(0,208,255,0.6)}
 
         button{width:100%;padding:12px;margin:8px 0;border:none;border-radius:10px;font-size:15px;font-weight:bold;cursor:pointer}
-        #generateBtn{background:linear-gradient(135deg,#e879f9,#c084fc);color:white;box-shadow:0 6px 15px rgba(232,121,249,0.4)}
+        #generateBtn{background:linear-gradient(135deg,#00d0ff,#0068ff);color:white;box-shadow:0 6px 15px rgba(0,208,255,0.4)}
         #generateBtn:hover{transform:translateY(-1px)}
-        .download-btn{background:linear-gradient(135deg,#ff9e5c,#ff7ac6);color:white;box-shadow:0 6px 15px rgba(255,158,92,0.4)}
+        .download-btn{background:linear-gradient(135deg,#00a1ff,#0088ff);color:white;box-shadow:0 6px 15px rgba(0,161,255,0.4)}
         .download-btn:hover{transform:translateY(-1px)}
+
         #qrCanvas{margin:20px auto;padding:20px;background:#fff;border-radius:16px;box-shadow:0 8px 25px rgba(0,0,0,0.15);transition:all .4s}
-        body.dark #qrCanvas{background:linear-gradient(135deg,#1a0d2e,#2d1b4e);border:2px solid #e879f9;box-shadow:0 0 30px rgba(232,121,249,0.5);padding:22px}
+        body.dark #qrCanvas{background:#000818;border:3px solid #00d0ff;box-shadow:0 0 35px rgba(0,208,255,0.5);padding:25px}
     </style>
 </head>
 <body>
@@ -78,9 +56,9 @@
         <option value="360">360×360</option>
     </select>
     <select id="errorCorrection">
-        <option value="M" selected>Medium</option>
+        <option value="M">Medium</option>
         <option value="Q">High</option>
-        <option value="H">Very High</option>
+        <option value="H" selected>Very High</option>
     </select>
 
     <button id="generateBtn">Generate</button>
@@ -93,10 +71,10 @@
         const qrCode = new QRCodeStyling({
             width:280,height:280,data:"https://example.com",margin:10,
             qrOptions:{errorCorrectionLevel:"H"},
-            dotsOptions:{type:"rounded"},
-            cornersSquareOptions:{type:"extra-rounded"},
-            cornersDotOptions:{type:"dot"},
-            backgroundOptions:{color:"#0d0a1a"}
+            dotsOptions:{type:"rounded",color:"#000000"},           // ZWARTE rondjes
+            cornersSquareOptions:{type:"extra-rounded",color:"#0008ff"}, // Diepblauw
+            cornersDotOptions:{type:"dot",color:"#0008ff"},         // Diepblauw
+            backgroundOptions:{color:"#ffffff"}                     // Altijd wit = 100% scanbaar
         });
         qrCode.append(document.getElementById("qrCanvas"));
 
@@ -109,27 +87,19 @@
         const gen = () => {
             const txt = document.getElementById("text").value.trim() || "https://example.com";
             const sz = parseInt(document.getElementById("size").value);
-            const dark = document.body.classList.contains("dark");
 
             qrCode.update({
-                width:sz,height:sz,data:txt,
-                dotsOptions:{color:dark?"#e879f9":"#000000"},
-                cornersSquareOptions:{color:dark?"#e879f9":"#000000"},
-                cornersDotOptions:{color:dark?"#ff7ac6":"#000000"},
-                backgroundOptions:{color:dark?"#0d0a1a":"#ffffff"},
-                dotsOptionsHelper: dark ? {colorType:{gradient:{type:"radial",colorStops:[
-                    {offset:0,color:"#e879f9"},{offset:0.5,color:"#f778ba"},{offset:1,color:"#ff9e5c"}
-                ]}}} : undefined
+                width:sz,height:sz,data:txt
             });
         };
 
         toggle.addEventListener("change", () => {
             document.body.classList.toggle("dark");
             localStorage.setItem("darkMode", toggle.checked ? "enabled" : "disabled");
-            gen();
         });
+
         document.getElementById("generateBtn").onclick = gen;
-        document.getElementById("downloadBtn").onclick = () => qrCode.download({name:"neon-qr",extension:"png"});
+        document.getElementById("downloadBtn").onclick = () => qrCode.download({name:"qr",extension:"png"});
         gen();
     });
 </script>
